force-app/main/default/objects/Child_Account_vod__c/fields/BOT_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>BOT_Account_Type__c</fullName>
    <description>This formula field is used to display the Account type of the Child Account by using the Criteria.</description>
    <formula>if(Child_Account_vod__r.RecordType.Name==&#39;BOT Person Account&#39;,&#39;Person Account&#39;, if(Child_Account_vod__r.RecordType.Name==&#39;Specialty Provider&#39;,&#39;Specialty Provider&#39;,&#39;Business Account&#39;))</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>