force-app/main/default/objects/Child_Account_vod__c/fields/BOT_Affiliate_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Affiliate_Account_ID__c</fullName>
    <description>To store the BOT Affiliate Account ID (Entity ID/PersonID). It is used for BOT internal reference.</description>
    <label>Affiliate Account ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>