force-app/main/default/objects/Child_Account_vod__c/fields/BOT_Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Parent_Account_ID__c</fullName>
    <description>To store the BOT Parent Account ID (Entity ID/PBM ID). It is used for BOT internal reference.</description>
    <label>Parent Account ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>