force-app/main/default/objects/Child_Account_vod__c/fields/BOT_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Person_ID__c</fullName>
    <description>This field is created by BOT. It is used to store the key personId. This value is used for BOT internal reference.</description>
    <label>Person ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>