force-app/main/default/objects/Child_Account_vod__c/fields/BOT_Title__c.field-meta.xml
<CustomField>
    <fullName>BOT_Title__c</fullName>
    <description>Used to store the Key Person Title.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>